--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,24 +26,26 @@ jobs:
     strategy:
       matrix:
         # run static analysis on bleeding and trailing edges
-        python-version: [ '3.9', '3.10', '3.14' ]
+        python-version: ['3.10', '3.12', '3.14']
         django-version:
-          - '3.2' # LTS April 2024
-          - '4.2' # LTS April 2026
-          - '5.2' # December 2025
+          - '4.2'    # LTS April 2024
+          - '5.2'    # April 2028
+          - '6.0rc1' # April 2027
         exclude:
-          - python-version: '3.9'
+          - python-version: '3.12'
             django-version: '4.2'
           - python-version: '3.14'
             django-version: '4.2'
+
+          - python-version: '3.10'
+            django-version: '5.2'
           - python-version: '3.14'
-            django-version: '3.2'
-          - python-version: '3.10'
-            django-version: '3.2'
-          - python-version: '3.9'
             django-version: '5.2'
+
           - python-version: '3.10'
-            django-version: '5.2'
+            django-version: '6.0rc1'
+          - python-version: '3.12'
+            django-version: '6.0rc1'
 
     env:
       TEST_PYTHON_VERSION: ${{ matrix.python-version }}
