--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -170,11 +170,13 @@ jobs:
     - name: Install Dependencies
       run: |
         just setup ${{ steps.sp.outputs.python-path }}
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
-        else
-          just test-lock Django~=${{ matrix.django-version }}.0
-        fi
+        $version = "${{ matrix.django-version }}"
+
+        if ($version -match "(a|b|rc)") {
+          just test-lock "Django==$version"
+        } else {
+          just test-lock "Django~=$version.0"
+        }
     - name: Run Unit Tests
       run: |
         just test ./tests/verify_environment.py
@@ -840,11 +842,13 @@ jobs:
       run: |
         just setup ${{ steps.sp.outputs.python-path }}
         just install
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
-        else
-          just test-lock Django~=${{ matrix.django-version }}.0
-        fi
+        $version = "${{ matrix.django-version }}"
+
+        if ($version -match "(a|b|rc)") {
+          just test-lock "Django==$version"
+        } else {
+          just test-lock "Django~=$version.0"
+        }
       shell: powershell
     - name: Run Powershell Tab Completion Tests
       run: |
@@ -933,11 +937,13 @@ jobs:
       run: |
         just setup ${{ steps.sp.outputs.python-path }}
         just install
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
-        else
-          just test-lock Django~=${{ matrix.django-version }}.0
-        fi
+        $version = "${{ matrix.django-version }}"
+
+        if ($version -match "(a|b|rc)") {
+          just test-lock "Django==$version"
+        } else {
+          just test-lock "Django~=$version.0"
+        }
       shell: pwsh
     - name: Run Powershell Tab Completion Tests
       run: |
