Use stable release of Django 6.0 in CI workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
           - '4.2' # LTS April 2026
           - '5.1' # December 2025
           - '5.2' # April 2028
-          - '6.0rc1' # prerelease
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.13'
             django-version: '4.2'
@@ -50,9 +50,9 @@ jobs:
             django-version: '5.1'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.11'
-            django-version: '6.0rc1'
+            django-version: '6.0'
     env:
       COVERAGE_FILE: py${{ matrix.python-version }}-linux-dj${{ matrix.django-version }}.coverage
       TEST_PYTHON_VERSION: ${{ matrix.python-version }}
@@ -118,7 +118,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -131,9 +131,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
 
     env:
       COVERAGE_FILE: py${{ matrix.python-version }}-windows-dj${{ matrix.django-version }}.coverage
@@ -198,7 +198,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -211,9 +211,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
 
     env:
       COVERAGE_FILE: py${{ matrix.python-version }}-macos-dj${{ matrix.django-version }}.coverage
@@ -364,7 +364,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -377,9 +377,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
     env:
       COVERAGE_FILE: linux-bash-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
       TEST_PYTHON_VERSION: ${{ matrix.python-version }}
@@ -445,7 +445,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -458,9 +458,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
     env:
       COVERAGE_FILE: linux-fish-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
       TEST_PYTHON_VERSION: ${{ matrix.python-version }}
@@ -528,7 +528,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -541,9 +541,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
 
     env:
       COVERAGE_FILE: macos-zsh-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
@@ -618,7 +618,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -631,9 +631,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
 
     env:
       COVERAGE_FILE: macos-bash-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
@@ -698,7 +698,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -711,9 +711,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
 
     env:
       COVERAGE_FILE: macos-fish-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
@@ -786,7 +786,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -799,9 +799,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
 
     env:
       COVERAGE_FILE: windows-powershell-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
@@ -881,7 +881,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0' # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -894,9 +894,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
 
     env:
       COVERAGE_FILE: windows-pwsh-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
