--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,7 +30,7 @@ jobs:
         django-version:
           - '4.2'    # LTS April 2024
           - '5.2'    # April 2028
-          - '6.0rc1' # April 2027
+          - '6.0'    # April 2027
         exclude:
           - python-version: '3.12'
             django-version: '4.2'
@@ -43,9 +43,9 @@ jobs:
             django-version: '5.2'
 
           - python-version: '3.10'
-            django-version: '6.0rc1'
+            django-version: '6.0'
           - python-version: '3.12'
-            django-version: '6.0rc1'
+            django-version: '6.0'
 
     env:
       TEST_PYTHON_VERSION: ${{ matrix.python-version }}
